# openclaw-bridge

./: .gitignore  Cargo.toml  GATEWAY.md  INSTALL.md  LICENSE  README.md  SETUP.md  dist-workspace.toml
.claude/instructions/: mcp-channel-server.md
.github/workflows/: ci.yml  release.yml
Formula/: openclaw-bridge.rb
skill/: openclaw.md
src/: auth.rs  cli.rs  conversation.rs  error.rs  lib.rs  main.rs  protocol.rs  ssh.rs  watch.rs  ws.rs
src/mcp/: mod.rs  tools.rs  transport.rs
src/tui/: app.rs  mod.rs  ui.rs  ws_task.rs
