[package]
name = "openclaw-bridge"
version = "0.2.0"
edition = "2024"
description = "CLI bridge connecting Claude Code to OpenClaw gateways"
license = "MIT"
repository = "https://github.com/mcande21/openclaw-bridge"

[[bin]]
name = "ocb"
path = "src/main.rs"
required-features = ["cli"]

[features]
default = []
cli = ["dep:clap"]
tui = ["cli", "dep:ratatui", "dep:crossterm", "dep:notify"]
mcp = ["cli", "dep:notify"]

[dependencies]
# CLI
clap = { version = "4", features = ["derive"], optional = true }

# TUI
ratatui = { version = "0.29", optional = true }
crossterm = { version = "0.28", optional = true }
notify = { version = "7.0", optional = true }

# serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# async runtime
tokio = { version = "1", features = ["full"] }

# WebSocket client
tokio-tungstenite = { version = "0.26", features = ["connect"] }
futures-util = "0.3"

# Ed25519 signing
ed25519-dalek = { version = "2", features = ["pkcs8", "pem", "rand_core"] }

# Random number generation (OS entropy for key generation)
rand_core = { version = "0.6", features = ["getrandom"] }

# Base64 encoding
base64 = "0.22"

# Hex encoding (device ID generation)
hex = "0.4"

# SHA-256 for device ID fingerprint
sha2 = "0.10"

# UUID generation
uuid = { version = "1", features = ["v4", "serde"] }

# date/time
chrono = { version = "0.4", features = ["serde"] }

# error handling
thiserror = "2"

# platform config directories
directories = "5"

[dev-dependencies]
tempfile = "3"

# The profile that 'dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"
